@@ -2,3 +2,9 @@
 
 developer: luca.depaolis@lnf.infn.it
 description: In this project I will prepare an exercise for the course of Marco Vanadia about object programmation for physicist
+
+---->LucaDePaolisPArticleProgram
+
+LucaDePaolisParticleProgram could be called using ./bin/LucaDePaolisParticleProgram. The corresponding file .cxx is in util folder.
+To produce the program I use "g++ -c util/LucaDePaolisParticleRepistory.cxx bin/LucaDePaolisParticleProgram"
+
