@@ -1,2 +1,5 @@
 	16/04/2018 Luca.depaolis@lnf.infn.it
 	*Setting up repistory skeleton
+	*Created first example of executable: file .cxx in folder "util", program in folder "bin"
+
+	
